bug fix: global gitignore and zsh installation

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
 - clean: ["~"]
 
 - shell:
+    - sudo apt install zsh
     - sh -c 'if [ ! -d "$HOME/.oh-my-zsh" ]; then sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"; fi'
 
 - link:
